--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "daisyui": "^4.12.23",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^7.1.5",
     "react-simple-captcha": "^9.3.1",
     "sort-by": "^0.0.2"
